syntax = "proto3";

package goods;

option go_package = "goods";

import "goods/common.proto";

message GetBrandListReq {
    
}

message GetBrandListRsp {
    int32 code = 1;
    string msg = 2;
    string log_id = 3;
    GetBrandListDataRsp data = 4;
    message GetBrandListDataRsp {
        repeated BaseBrand brand_list = 1;
    }
}